--- a/.k8s/dev/deployment.yaml
+++ b/.k8s/dev/deployment.yaml
@@ -63,6 +63,8 @@ spec:
               value: 'UA-131160087-14'
             - name: RAILS_LOG_TO_STDOUT
               value: enabled
+            - name: DISPLAY_RAW_RESPONSES
+              value: enabled
             - name: COURT_DATA_ADAPTOR_API_UID
               valueFrom:
                 secretKeyRef:
