--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "resolutions": {
     "dot-prop": "^5.2.0",
+    "http-proxy": "^1.18.1",
+    "kind-of": "^6.0.3",
     "minimist": "^1.2.2",
-    "kind-of": "^6.0.3"
+    "serialize-javascript": "^3.1.0"
   },
   "standard": {
     "globals": [
