--- a/.k8s/uat/ingress.yaml
+++ b/.k8s/uat/ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: laa-court-data-ui-app-ingress
   namespace: laa-court-data-ui-uat
+  annotations:
+    kubernetes.io/ingress.class: laa-court-data-ui-uat
 spec:
   rules:
     - host: uat.view-court-data.service.justice.gov.uk
