--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-proxy": "^1.18.1",
     "kind-of": "^6.0.3",
     "minimist": "^1.2.2",
+    "node-forge": "^0.10.0",
     "serialize-javascript": "^3.1.0"
   },
   "standard": {
