Use small circleci container for build and push
Size makes no significant difference to speed
of build and push anecdotally. Provisioning
a medium container may take longer and costs
more credits.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,7 @@ executors:
           POSTGRES_DB: laa_court_data_ui_test
 
   cloud-platform-executor:
+    resource_class: small
     docker:
     - image: ${ECR_ENDPOINT}/cloud-platform/tools:circleci
       environment:
