--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "@rails/ujs": "^6.0.3",
     "@rails/webpacker": "5.2.1",
-    "govuk-frontend": "^3.9.1",
-    "webpack": "^4.44.2"
+    "govuk-frontend": "^3.9.1"
   },
   "devDependencies": {
     "sass-lint": "^1.13.1",
@@ -23,7 +22,8 @@
     "kind-of": "^6.0.3",
     "minimist": "^1.2.2",
     "node-forge": "^0.10.0",
-    "serialize-javascript": "^3.1.0"
+    "serialize-javascript": "^3.1.0",
+    "webpack": "^4.44.2"
   },
   "standard": {
     "globals": [
