Add prometheus_exporter gem and config
Fix rubocop warnings

Start prometheus_exporter in docker-entrypoint

Add service-metrics kubernetes service

Add deployment-metrics.yaml

Add deployment-metrics to deploy scripts

Tweak deployment script

Tweak deployment

Tweak deploy.sh

Rebased on master

Rename container in deployment-metrics

Test commmit

Set host for prometheus-exporter

Remove prometheus client configuration

Remove test change

Tweak

Another attempt to set prometheus host

Add prometheus-exporter gem and configure

Remove changes to deployment scripts

--- a/.k8s/dev/deployment.yaml
+++ b/.k8s/dev/deployment.yaml
@@ -110,3 +110,21 @@ spec:
                 secretKeyRef:
                   name: lcdui-secrets
                   key: GOVUK_NOTIFY_API_KEY
+        - name: laa-court-data-ui-metrics
+          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
+          imagePullPolicy: Always
+          command: ['sh', '-c', "bundle exec prometheus_exporter"]
+          ports:
+          - containerPort: 9394
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: 9394
+            initialDelaySeconds: 10
+            periodSeconds: 60
