--- a/.k8s/dev/service.yaml
+++ b/.k8s/dev/service.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ports:
     - port: 80
-      name: metrics
+      name: http
       targetPort: 3000
   selector:
     app: laa-court-data-ui
