--- a/.k8s/dev/deployment-metrics.yaml
+++ b/.k8s/dev/deployment-metrics.yaml
@@ -8,15 +8,15 @@ spec:
   selector:
     matchLabels:
       app: laa-court-data-ui
-      tier: metrics
+      service: laa-court-data-ui-metrics-service
   template:
     metadata:
       labels:
         app: laa-court-data-ui
-        tier: metrics
+        service: laa-court-data-ui-metrics-service
     spec:
       containers:
-        - name: metrics
+        - name: laa-court-data-ui-metrics
           imagePullPolicy: Always
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
           command: ['bundle', 'exec', 'prometheus_exporter']
@@ -41,3 +41,48 @@ spec:
             requests:
               cpu: 10m
               memory: 64Mi
+          env:
+            - name: ENV
+              value: 'dev'
+            - name: RACK_ENV
+              value: 'production'
+            - name: RAILS_ENV
+              value: 'production'
+            - name: DOMAIN_URL
+              value: 'https://dev.view-court-data.service.justice.gov.uk'
+            - name: COURT_DATA_ADAPTOR_API_URL
+              value: https://laa-court-data-adaptor-dev.apps.live-1.cloud-platform.service.justice.gov.uk/api/internal/v1
+            - name: RAILS_SERVE_STATIC_FILES
+              value: enabled
+            - name: RAILS_LOG_TO_STDOUT
+              value: enabled
+            - name: COURT_DATA_ADAPTOR_API_UID
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: COURT_DATA_ADAPTOR_API_UID
+            - name: COURT_DATA_ADAPTOR_API_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: COURT_DATA_ADAPTOR_API_SECRET
+            - name: SECRET_KEY_BASE
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: SECRET_KEY_BASE
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-rds
+                  key: url
+            - name: REDIS_URL
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-elasticache
+                  key: url
+            - name: GOVUK_NOTIFY_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: GOVUK_NOTIFY_API_KEY
