--- a/.k8s/uat/service.yaml
+++ b/.k8s/uat/service.yaml
@@ -10,5 +10,8 @@ spec:
     - port: 80
       name: http
       targetPort: 3000
+    - port: 9394
+      name: metrics
+      targetPort: 9394
   selector:
     app: laa-court-data-ui
