--- a/.k8s/dev/deployment.yaml
+++ b/.k8s/dev/deployment.yaml
@@ -113,7 +113,7 @@ spec:
         - name: laa-court-data-ui-metrics
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
           imagePullPolicy: Always
-          command: ['sh', '-c', "bundle exec prometheus_exporter"]
+          command: ['sh', '-c', "bundle exec prometheus_exporter --bind 0.0.0.0"]
           ports:
           - containerPort: 9394
           livenessProbe:
