raise max MultipleMemoizedHelpers
currently have to too many but they are useful
and keep repetition down.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -114,6 +114,9 @@ RSpec/MultipleExpectations:
   Exclude:
     - spec/features/**/*
 
+RSpec/MultipleMemoizedHelpers:
+  Max: 15
+
 RSpec/NestedGroups:
   Max: 4
 
