--- a/.k8s/staging/deployment.yaml
+++ b/.k8s/staging/deployment.yaml
@@ -113,6 +113,11 @@ spec:
                 secretKeyRef:
                   name: lcdui-secrets
                   key: SENTRY_DSN
+            - name: SLACK_ALERTS_WEBHOOK
+              valueFrom:
+                secretKeyRef:
+                  name: lcdui-secrets
+                  key: SLACK_ALERTS_WEBHOOK
         - name: laa-court-data-ui-metrics
           image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
           imagePullPolicy: Always
