Exculde config environment files from cop
Metrics/BlockLength violation is not particulalry
applicable to configuration.

It is possible to abstract to yml file but not
sure it is worth it.

[abstract to yml](https://github.com/shadabahmed/logstasher#optionally-use-configlogstasheryml-overrides-environmentrb)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -62,6 +62,7 @@ Metrics/BlockLength:
   Exclude:
     - spec/**/*.rb
     - config/routes.rb
+    - config/environments/*.rb
     - config/initializers/devise.rb
 
 Metrics/MethodLength:
