Enable/allow use of feature and scenario aliases
This cop defaults to disallowing any aliases
for feature specs. I propose we allow feature
and scenario as a minimum.

Possible aliases are:
```
  background: :before,
  scenario:   :it,
  xscenario:  :xit,
  given:      :let,
  given!:     :let!,
  feature:    :describe
```

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,9 +24,6 @@ AllCops:
     - spec/rails_helper.rb
     - node_modules/**/*
 
-Capybara/FeatureMethods:
-  Enabled: false
-
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
 
@@ -102,6 +99,9 @@ Rails/OutputSafety:
 
 RSpec/AnyInstance:
   Enabled: false
+
+RSpec/Capybara/FeatureMethods:
+  EnabledMethods: ['feature', 'scenario']
 
 # => RSpec
 RSpec/ExampleLength:
