CBO-1636, Replace lint-sass with Stylelint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,8 +128,8 @@ commands:
           name: Run JS-lint
           command: yarn run lint-js
       - run:
-          name: Run Sass-lint
-          command: yarn run lint-sass
+          name: Run Stylelint
+          command: yarn run validate:scss
 
   brakeman:
     steps:
