Revert "Merge pull request #409 from ministryofjustice/js-scss-lint"
This reverts commit 555929969c5162e3bead53c15a91fc9cd731d449, reversing
changes made to 1e65d8da63617275e5e01f635a4bd0445c17e3b3.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,10 +126,10 @@ commands:
     steps:
       - run:
           name: Run JS-lint
-          command: yarn run validate:js
+          command: yarn run lint-js
       - run:
-          name: Run Stylelint
-          command: yarn run validate:scss
+          name: Run Sass-lint
+          command: yarn run lint-sass
 
   brakeman:
     steps:
