Add new cop to rubocop.yml
Disable it until we can investigate warnings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,9 @@ Layout/LineLength:
   IgnoredPatterns: ['(\A|\s)#','.*\s+ # .*', "body: '{\".*\":", "%r{http.*"]
   AllowHeredoc: true
 
+Layout/RedundantLineBreak:
+  Enabled: false
+
 Layout/SpaceAroundMethodCallOperator:
   Enabled: true
 
