Make all devs reviewers for all dependabot prs for the time being
and temporarily add naseberry as reviewer for npm/webpacker dependabot prs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,7 @@ updates:
   reviewers:
   - kmahern
   - mabely
+  - malcolmvonmoj
   ignore:
   - dependency-name: simplecov
     versions:
@@ -52,7 +53,10 @@ updates:
     timezone: Europe/London
   open-pull-requests-limit: 10
   reviewers:
+  - naseberry
   - malcolmvonmoj
+  - kmahern
+  - mabely
   ignore:
   - dependency-name: webpack
     versions:
