Fix JS linter complaints by adding global vars to package.json

--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
   "standard": {
     "globals": [
       "dataLayer",
-      "googleTrackingID"
+      "googleTrackingID",
+      "Cypress",
+      "cy"
+    ],
+    "env": [
+      "mocha"
     ]
   }
 }
