Add Cypress tests to CI/CD
Add Cypress config to turn off videos, install start-server-and-test
yarn module to start Rails server and Cypress synchronously, define yarn
shortcut commands, and add Cypress commands and job to CI workflow.

Cypress requires a Rails server to be running. The start-server-and-test
module runs Rails server, pings Rails server URL until it returns 200
before running `cypress:run`. It then shuts down the server after tests
complete.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,6 +159,13 @@ commands:
           path: /tmp/test-results
           destination: test-results
 
+  cypress:
+    steps:
+      - db-setup
+      - run:
+          name: Run Cypress tests
+          command: yarn run cypress:ci
+
   upload-coverage:
     steps:
       - run:
@@ -235,6 +242,14 @@ jobs:
           path: tmp/coverage
       - upload-coverage
 
+  cypress-tests:
+    executor: test-executor
+    parallelism: 1
+    steps:
+      - checkout
+      - build-base
+      - cypress
+
   build-app-container:
     executor: cloud-platform-executor
     steps:
@@ -285,6 +300,9 @@ workflows:
       - rspec-tests:
           requires:
             - build-test-container
+      - cypress-tests:
+          requires:
+            - build-test-container
       - build-app-container:
           requires:
             - linter-tests
@@ -325,6 +343,9 @@ workflows:
           requires:
             - build-test-container
       - rspec-tests:
+          requires:
+            - build-test-container
+      - cypress-tests:
           requires:
             - build-test-container
 
