--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
     "validate:js": "standard",
     "validate:scss": "stylelint **/*.scss",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "start-server": "bundle exec rails server -e test",
-    "cypress:ci": "start-server-and-test start-server http://localhost:3000 cypress:run"
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@ministryofjustice/frontend": "^0.2.5",
     "@rails/ujs": "^6.1.4",
     "@rails/webpacker": "5.4.0",
     "govuk-frontend": "^3.13.0",
-    "start-server-and-test": "^1.12.6"
+    "wait-on": "^6.0.0"
   },
   "devDependencies": {
     "cypress": "^7.7.0",
