--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@ministryofjustice/frontend": "^0.2.5",
     "@rails/ujs": "^6.1.4",
     "@rails/webpacker": "5.4.0",
-    "govuk-frontend": "^3.13.0",
-    "wait-on": "^6.0.0"
+    "govuk-frontend": "^3.13.0"
   },
   "devDependencies": {
     "cypress": "^7.7.0",
